tests/rt/neg/ifc/lclear-implicit-receive.trp
(* negative test; this program attempts to receive a low message 
   in a high context without sufficiently raising the mailbox 
   clearance 
*)

send (self(), 1);

if (true raisedTo `{alice}`) 
        (* then consume  (0, `{}`, `{}`)  *)
        then rcvp (`{}`, [hn x => x]) 
        else ()

